[gd_scene load_steps=3 format=1]

[ext_resource path="res://theme/theme.tres" type="Theme" id=1]
[ext_resource path="res://example.gd" type="Script" id=2]

[node name="Example" type="Control"]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
theme/theme = ExtResource( 1 )
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0
script/script = ExtResource( 2 )
__meta__ = { "_edit_lock_":true }

[node name="Panel" type="Panel" parent="."]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 50.0
margin/top = 50.0
margin/right = 50.0
margin/bottom = 50.0

[node name="ControlGallery" type="Control" parent="Panel"]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 289.0
margin/top = 47.0
margin/right = 43.0
margin/bottom = 53.0
__meta__ = { "_edit_lock_":true }

[node name="Label" type="Label" parent="Panel/ControlGallery"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 365.0
margin/top = 8.0
margin/right = 405.0
margin/bottom = 30.0
text = "Editable Text:"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="TextEdit" type="TextEdit" parent="Panel/ControlGallery"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 323.0
margin/top = 34.0
margin/right = 554.0
margin/bottom = 262.0
syntax_highlighting = false
show_line_numbers = false
highlight_all_occurrences = false
caret/block_caret = false
caret/caret_blink = false
caret/caret_blink_speed = 0.65

[node name="ShowWindowDialog" type="Button" parent="Panel/ControlGallery"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 347.0
margin/top = 292.0
margin/right = 528.0
margin/bottom = 326.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Show WindowDialog"
flat = false

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/ControlGallery"]

anchor/top = 3
anchor/bottom = 3
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 41.0
margin/top = 193.0
margin/right = 207.0
margin/bottom = -181.0
custom_constants/separation = 2
alignment = 0

[node name="CheckBox" type="CheckBox" parent="Panel/ControlGallery/VBoxContainer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 166.0
margin/bottom = 31.0
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
text = "Check Me"
flat = false
align = 0

[node name="CheckBox2" type="CheckBox" parent="Panel/ControlGallery/VBoxContainer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 33.0
margin/right = 166.0
margin/bottom = 64.0
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
text = "Check Me"
flat = false
align = 0

[node name="CheckBox3" type="CheckBox" parent="Panel/ControlGallery/VBoxContainer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 66.0
margin/right = 166.0
margin/bottom = 97.0
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
text = "Check Me"
flat = false
align = 0

[node name="OptionButton" type="OptionButton" parent="Panel/ControlGallery/VBoxContainer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 99.0
margin/right = 166.0
margin/bottom = 133.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Option 1"
flat = false
align = 0
selected = 0
items = [ "Option 1", null, false, 0, null, "Option 2", null, false, 1, null, "Option 3", null, true, 2, null ]

[node name="LineEdit" type="LineEdit" parent="Panel/ControlGallery/VBoxContainer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 135.0
margin/right = 166.0
margin/bottom = 169.0
text = "Edit Me"
placeholder/alpha = 0.6
expand_to_len = false
focus_mode = 2
caret/caret_blink = false
caret/caret_blink_speed = 0.65

[node name="ButtonContainer" type="ButtonGroup" parent="Panel/ControlGallery/VBoxContainer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 171.0
margin/right = 166.0
margin/bottom = 233.0
alignment = 0

[node name="CheckBox" type="CheckBox" parent="Panel/ControlGallery/VBoxContainer/ButtonContainer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 166.0
margin/bottom = 31.0
toggle_mode = true
click_on_press = true
enabled_focus_mode = 2
shortcut = null
text = "Me!"
flat = false
align = 0

[node name="CheckBox2" type="CheckBox" parent="Panel/ControlGallery/VBoxContainer/ButtonContainer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 31.0
margin/right = 166.0
margin/bottom = 62.0
toggle_mode = true
click_on_press = true
enabled_focus_mode = 2
shortcut = null
text = "No, me!"
flat = false
align = 0

[node name="SpinBox" type="SpinBox" parent="Panel/ControlGallery/VBoxContainer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 235.0
margin/right = 166.0
margin/bottom = 269.0
range/min = 0.0
range/max = 100.0
range/step = 1.0
range/page = 0.0
range/value = 1.0
range/exp_edit = false
range/rounded = false
editable = true
prefix = ""
suffix = ""

[node name="HSlider" type="HSlider" parent="Panel/ControlGallery/VBoxContainer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 271.0
margin/right = 166.0
margin/bottom = 283.0
range/min = 0.0
range/max = 100.0
range/step = 1.0
range/page = 0.0
range/value = 1.0
range/exp_edit = false
range/rounded = false
tick_count = 8
ticks_on_borders = false
focus_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]

anchor/top = 3
anchor/bottom = 3
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 20.0
margin/top = 90.0
margin/right = 270.0
margin/bottom = -57.0
custom_constants/separation = 2
alignment = 1
__meta__ = { "_edit_group_":true }

[node name="ExampleText" type="Button" parent="Panel/VBoxContainer"]

hint/tooltip = "Example text."
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 3
margin/left = 0.0
margin/top = 0.0
margin/right = 250.0
margin/bottom = 34.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Example Text"
flat = false
align = 0

[node name="FiraSansFontUsed" type="Button" parent="Panel/VBoxContainer"]

hint/tooltip = "This demo uses the open source Fira Sans font."
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 3
margin/left = 0.0
margin/top = 36.0
margin/right = 250.0
margin/bottom = 70.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Fira Sans Font Used"
flat = false
align = 0

[node name="ClickMeForControlGallery" type="Button" parent="Panel/VBoxContainer"]

hint/tooltip = "Click to see the control gallery."
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 3
margin/left = 0.0
margin/top = 72.0
margin/right = 250.0
margin/bottom = 106.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Click me for Control Gallery"
flat = false
align = 0

[node name="HSeparator" type="HSeparator" parent="Panel/VBoxContainer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 108.0
margin/right = 250.0
margin/bottom = 111.0

[node name="QuitDemo" type="Button" parent="Panel/VBoxContainer"]

hint/tooltip = "Click to quit the demo."
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 3
margin/left = 0.0
margin/top = 113.0
margin/right = 250.0
margin/bottom = 150.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Quit Demo"
flat = false
align = 0

[node name="WindowDialog" type="WindowDialog" parent="."]

visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 285.0
margin/top = 245.0
margin/right = 699.0
margin/bottom = 336.0
popup/exclusive = false
window/title = "Hello Window!"

[connection signal="pressed" from="Panel/ControlGallery/ShowWindowDialog" to="." method="_on_ShowWindowDialog_pressed"]

[connection signal="pressed" from="Panel/VBoxContainer/ClickMeForControlGallery" to="." method="_on_ClickMeForControlGallery_pressed"]

[connection signal="pressed" from="Panel/VBoxContainer/QuitDemo" to="." method="_on_QuitDemo_pressed"]


